recursion.hanoi.lessons.recursion.hanoi.HanoiBoard.scala.error
HanoiBoard:7: error: not found: value n
	if(n==1){
           ^HanoiBoard:10: error: not found: value heigh
		solve(src,dst,other,heigh-1);
                                    ^HanoiBoard:12: error: not found: value heigh
		solve(other,dst,src,heigh-1);
                                    ^